docs: user usage

--- a/bindings/pyl7vp/notebooks/earthquake.ipynb
+++ b/bindings/pyl7vp/notebooks/earthquake.ipynb
@@ -146,12 +146,8 @@
    "source": [
     "earthquake_map.add_dataset({\n",
     "    \"id\": \"earthquake\",\n",
-    "    \"metadata\": {\n",
-    "        \"name\": \"earthquake\",\n",
-    "    },\n",
     "    \"type\": 'local',\n",
-    "    \"data\": data,\n",
-    "    \"columns\": []\n",
+    "    \"data\": data\n",
     "})"
    ]
   },
