feat: 支持 DataFrame 类型

--- a/bindings/pyl7vp/notebooks/DataFrame.ipynb
+++ b/bindings/pyl7vp/notebooks/DataFrame.ipynb
@@ -6,20 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('csv-data.csv')\n",
-    "\n",
-    "print(df)"
+    "df = pd.DataFrame(\n",
+    "    {'id': ['a', 'b', 'c'], \n",
+    "     'point_latitude': [31.2384, 31.2311, 31.2334], \n",
+    "     'point_longitude': [108.30948, 108.30231, 108.30238], \n",
+    "     'value': [5, 11, 9], \n",
+    "     'time': ['2019-08-01 12:00:00', '2019-08-01 12:05:00', '2020-08-01 11:55:00']\n",
+    "     })"
    ]
   },
   {
