--- a/bindings/pyl7vp/notebooks/quick-start.ipynb
+++ b/bindings/pyl7vp/notebooks/quick-start.ipynb
@@ -26,12 +26,13 @@
       },
       "outputs": [],
       "source": [
-        "data = [\n",
-        "  { \"longitude\": 105.005, \"latitude\": 32.349, \"mag\": 5.2 },\n",
-        "  { \"longitude\": 104.602, \"latitude\": 32.067, \"mag\": 3 },\n",
-        "  { \"longitude\": 103.665, \"latitude\": 31.29, \"mag\": 6 },\n",
-        "  { \"longitude\": 105.275, \"latitude\": 32.416, \"mag\": 2 }\n",
-        "]"
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.DataFrame(\n",
+        "  {'longitude': [105.005, 104.602, 103.665, 105.275],\n",
+        "   'latitude': [32.349, 32.067, 31.29, 32.416],\n",
+        "   'mag': [5.2, 3.0, 6.0, 2.0]\n",
+        "  })"
       ]
     },
     {
@@ -61,7 +62,7 @@
         "\n",
         "\n",
         "# Add dataset to map\n",
-        "l7vp_map.add_dataset({\"id\": \"my_dataset\", \"type\": 'local', \"data\": data})"
+        "l7vp_map.add_dataset({\"id\": \"my_dataset\", \"type\": 'local', \"data\": df})"
       ]
     },
     {
@@ -165,7 +166,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.6.2"
     }
   },
   "nbformat": 4,
