--- a/bindings/pyl7vp/notebooks/quick-start.ipynb
+++ b/bindings/pyl7vp/notebooks/quick-start.ipynb
@@ -2,11 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "3a7-CDgFZBFo"
-      },
+      "metadata": {},
       "source": [
-        "## PyL7VP in Notebook"
+        "### Install [PyL7VP](https://pypi.org/project/pyl7vp)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install pyl7vp"
       ]
     },
     {
@@ -122,12 +129,10 @@
         "id": "LcdzQZp8Kpg7"
       },
       "source": [
-        "### Add Layer\n",
-        "\n",
         "![](https://mdn.alipayobjects.com/huamei_qa8qxu/afts/img/A*pAh4TZBM4-0AAAAAAAAAAAAADmJ7AQ/original)\n",
         "\n",
         "\n",
-        "More in [Config Map Widget](https://www.yuque.com/antv/htpfbw/usrw68bir8tt0yxy#LQzPy)"
+        "Add layers, filters and popup, More in [Config Map Widget](https://www.yuque.com/antv/l7vp/pyl7vp-user-guide#LQzPy)."
       ]
     },
     {
