feat: pyl7vp 支持 DataFrame 类型 (#46)

--- a/bindings/pyl7vp/notebooks/quick-start.ipynb
+++ b/bindings/pyl7vp/notebooks/quick-start.ipynb
@@ -2,11 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "3a7-CDgFZBFo"
-      },
+      "metadata": {},
       "source": [
-        "## PyL7VP in Notebook"
+        "### Install [PyL7VP](https://pypi.org/project/pyl7vp)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%pip install pyl7vp"
       ]
     },
     {
@@ -26,12 +33,13 @@
       },
       "outputs": [],
       "source": [
-        "data = [\n",
-        "  { \"longitude\": 105.005, \"latitude\": 32.349, \"mag\": 5.2 },\n",
-        "  { \"longitude\": 104.602, \"latitude\": 32.067, \"mag\": 3 },\n",
-        "  { \"longitude\": 103.665, \"latitude\": 31.29, \"mag\": 6 },\n",
-        "  { \"longitude\": 105.275, \"latitude\": 32.416, \"mag\": 2 }\n",
-        "]"
+        "import pandas as pd\n",
+        "\n",
+        "df = pd.DataFrame(\n",
+        "  {'longitude': [105.005, 104.602, 103.665, 105.275],\n",
+        "   'latitude': [32.349, 32.067, 31.29, 32.416],\n",
+        "   'mag': [5.2, 3.0, 6.0, 2.0]\n",
+        "  })"
       ]
     },
     {
@@ -61,7 +69,7 @@
         "\n",
         "\n",
         "# Add dataset to map\n",
-        "l7vp_map.add_dataset({\"id\": \"my_dataset\", \"type\": 'local', \"data\": data})"
+        "l7vp_map.add_dataset({\"id\": \"my_dataset\", \"type\": 'local', \"data\": df})"
       ]
     },
     {
@@ -121,12 +129,10 @@
         "id": "LcdzQZp8Kpg7"
       },
       "source": [
-        "### Add Layer\n",
-        "\n",
         "![](https://mdn.alipayobjects.com/huamei_qa8qxu/afts/img/A*pAh4TZBM4-0AAAAAAAAAAAAADmJ7AQ/original)\n",
         "\n",
         "\n",
-        "More in [Config Map Widget](https://www.yuque.com/antv/htpfbw/usrw68bir8tt0yxy#LQzPy)"
+        "Add layers, filters and popup, More in [Config Map Widget](https://www.yuque.com/antv/l7vp/pyl7vp-user-guide#LQzPy)."
       ]
     },
     {
@@ -165,7 +171,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.6.2"
     }
   },
   "nbformat": 4,
